ast/src/snapshots/transmute_ast__parser__tests__err_unprotected_struct_in_if_expression_4.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"if (1 + 1) - Point{} {}\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (22) identifier 357, number 358, `true` 360, `false` 361, `let` 363, `ret` 364, `if` 365, `while` 366, `.` 1029, `(` 362, `=` 1087, `*` 1198, `/` 1196, `-` 359, `-` 1192, `+` 1194, `==` 1180, `!=` 1182, `>` 1184, `>=` 1186, `<` 1188, `<=` 1190",
                span: 1:22; [21, 22],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    353,
                ),
            },
        ],
    },
)
