ast/src/snapshots/transmute_ast__parser__tests__err_while_missing_open_curly_bracket.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"while true }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (13) `.`, `{`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:12; [11, 12],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1466,
                ),
            },
        ],
    },
)
