ast/src/snapshots/transmute_ast__parser__tests__expression_literal_identifier.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"forty_two;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "forty_two",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 9],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 9],
                    },
                ),
                span: 1:1; [0, 9],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(0),
                ),
                span: 1:1; [0, 10],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
