ast/src/snapshots/transmute_ast__parser__tests__expression_literal_number.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"42;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:1; [0, 2],
                    },
                ),
                span: 1:1; [0, 2],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(0),
                ),
                span: 1:1; [0, 3],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
