ast/src/snapshots/transmute_ast__parser__tests__function_call.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"times_two(21);\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "times_two",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 9],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 9],
                    },
                ),
                span: 1:1; [0, 9],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(21),
                        span: 1:11; [10, 12],
                    },
                ),
                span: 1:11; [10, 12],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: FunctionCall(
                    ExprId(0),
                    [
                        ExprId(1),
                    ],
                ),
                span: 1:1; [0, 13],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 14],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
