ast/src/snapshots/transmute_ast__parser__tests__function_empty_block.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [],
                ),
                span: 1:9; [8, 10],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 1:5; [4, 5],
                    },
                    [],
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(0),
                ),
                span: 1:1; [0, 10],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
)
