ast/src/snapshots/transmute_ast__parser__tests__function_statement.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "times_two",
            IdentId(2) => "a",
            IdentId(3) => "number",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:18; [17, 23],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:28; [27, 28],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(1),
                        span: 1:28; [27, 28],
                    },
                ),
                span: 1:28; [27, 28],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 1:32; [31, 32],
                    },
                ),
                span: 1:32; [31, 32],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Binary(
                    ExprId(0),
                    BinaryOperator {
                        kind: Multiplication,
                        span: 1:30; [29, 30],
                    },
                    ExprId(1),
                ),
                span: 1:28; [27, 32],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 1:28; [27, 33],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(2),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:28; [27, 33],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 1:5; [4, 13],
                    },
                    [],
                    [],
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId(2),
                                span: 1:15; [14, 15],
                            },
                            type_def_id: TypeDefId(0),
                            span: 1:15; [14, 23],
                        },
                    ],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(3),
                ),
                span: 1:1; [0, 33],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:18; [17, 23],
            },
        ],
        root: StmtId(0),
    },
)
